<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GET SWOLE</string>
    <string name="profile_title">Profile</string>
    <string name="friends_title">Friends</string>
    <string name="settings_title">Settings</string>
    <string name="title_section1">Workouts</string>
    <string name="title_section2">Schedule</string>
    <string name="title_section3">Progress</string>
    
    <!-- Colors -->
    <color name="white">#FFFFFF</color>
    <color name="background_holo_dark">#aaa</color>
    
    <!-- Profile -->
	<string name="default_profile_photo">default_profile.png</string>
	<string name="profile_saved_photo_file_name">profile_photo</string>
	<string name="profile_first_name">First</string>
	<string name="profile_last_name">Last</string>
	<string name="profile_nickname">Nickname</string>
	<string name="profile_sport">Sport</string>
    
	<string name="profile_gender_male">Male</string>
    
	<string name="profile_gender_female">Female</string>

    <string name="profile_shared_workouts">Shared Workouts\n(Check all that apply)</string>
	
    <string name="profile_shared_preferences">profile_shared_preferences</string>
    <string name="preference_key_profile_first_name">profile_first_name</string>
    <string name="preference_key_profile_last_name">profile_last_name</string>
    
    <string name="preference_key_profile_gender">profile_gender</string>
	
    <string name="ui_button_save_title">Save</string>
    <string name="ui_button_cancel_title">Cancel</string>
    
    <string name="save_profile_message">Saved Profile!</string>
    <string name="cancel_profile_message">Canceled Profile</string>

</resources>
