<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ProfileActivity" >

    <LinearLayout
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
    	android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
    	android:focusable="true"
		android:focusableInTouchMode="true">

    	<LinearLayout
    	    android:layout_width="fill_parent"
    	    android:layout_height="150dp"
    	    android:layout_margin="5dp"
    	    android:orientation="horizontal"
    	    android:gravity="center" >

    	    <ImageView
    	        android:id="@+id/profilePhoto"
    	        android:layout_width="0dp"
    	        android:layout_height="match_parent"
    	        android:layout_weight="0.50"
    	        android:onClick="onChangePhotoClicked"
    	        android:contentDescription="@string/default_profile_photo"
    	        android:src="@drawable/default_profile" />

    	    <LinearLayout
    	        android:layout_width="wrap_content"
    	        android:layout_height="match_parent"
    	        android:layout_weight="0.10"
    	        android:orientation="vertical" >
    	    
		    	<EditText
		    	    android:id="@+id/firstName"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/profile_first_name"
		            android:inputType="textCapWords"
		            android:singleLine="true" >
		            
				</EditText>
				
		    	<EditText
		    	    android:id="@+id/lastName"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/profile_last_name"
		            android:inputType="textCapWords"
		            android:singleLine="true" >
		            
				</EditText>
    	          
    	    
    	    	<EditText
		    	    android:id="@+id/nickname"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/profile_nickname"
		            android:inputType="textCapWords"
		            android:singleLine="true" >
		            
				</EditText>
    	    
    	    	<EditText
		    	    android:id="@+id/sport"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/profile_sport"
		            android:inputType="textCapWords"
		            android:singleLine="true" >
		            
				</EditText>
    	    
			</LinearLayout>
    	        
    	</LinearLayout>
    	
    	<!--<TextView
    	    android:id="@+id/height"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:height_="" />
    	    -->

    	<RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal" >

    	    <RadioButton
                android:id="@+id/radioGenderM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_gender_male" />
    	    
            <RadioButton
                android:id="@+id/radioGenderF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_gender_female" />

        </RadioGroup>


    	<TextView 
    	    android:id="@+id/sharedWorkouts"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:text="@string/profile_shared_workouts"
    	    android:textAppearance="?android:attr/textAppearanceMedium"
    	    android:textColor="@color/white"
    	    android:background="@color/background_holo_dark" />
        
		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >
            
            <Button
                android:id="@+id/btnProfileSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_weight="1"
                android:onClick="onSaveClicked"
                android:text="@string/ui_button_save_title" >
            </Button>

            <Button
                android:id="@+id/btnProfileCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:onClick="onCancelClicked"
                android:text="@string/ui_button_cancel_title" >
            </Button>
            
        </LinearLayout>
            
	</LinearLayout>
	
</ScrollView>
